kqed_dev4/src/objects/Campaign_Criteria_Template_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operators__c</fullName>
        <label>Operators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Field__c</fullName>
        <label>Query Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <referenceTo>Campaign_Criteria_Template__c</referenceTo>
        <relationshipLabel>Campaign Criteria Template Detail</relationshipLabel>
        <relationshipName>Campaign_Criteria_Template_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Criteria Template Detail</label>
    <nameField>
        <displayFormat>TEMP-{0000}</displayFormat>
        <label>Template No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Criteria Template Detail</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>